--- a/dotenv.template
+++ b/dotenv.template
@@ -1,7 +1,7 @@
-OPENAI_API_KEY=[INTPUT_YOUR_API_KEY]
-DEEPSEEK_API_KEY=[INTPUT_YOUR_API_KEY]
+OPENAI_API_KEY="INTPUT_YOUR_API_KEY"
+DEEPSEEK_API_KEY="INTPUT_YOUR_API_KEY"
 
 
 ###
-change [INTPUT_YOUR_API_KEY] to your api key and in command line, insert `cp dotenv.template .env`
+#change "INTPUT_YOUR_API_KEY" to your api key and in command line, insert `cp dotenv.template .env`
 ###
