--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ textworld>=1.5.0
 gym>=0.26.0
 openai>=1.0.0
 python-dotenv>=1.0.0
-tiktoken>=0.5.0
+elasticsearch>=8.11.0
+uvicorn>=0.25.0
+fastapi>=0.110.0
