--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: llm_play
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: llm.dockerfile
     container_name: llm_play
     working_dir: /app
-    command: ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: uvicorn app:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./textworld_map:/app/textworld_map
       - ./llm_play.py:/app/llm_play.py
@@ -21,8 +21,11 @@ services:
     image: ui
     build:
       context: .
-      dockerfile: dockerfile-web
+      dockerfile: web.dockerfile
     container_name: ui
+    working_dir: /app/web
+    volumes:
+      - ./web:/app/web
     command: npx vite --host 0.0.0.0 --port 8080
     ports:
       - 8080:8080
