start implement ES

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       - 9300:9300
     environment:
       - "discovery.type=single-node"
+      - "xpack.security.enabled=false"
+      - "xpack.security.transport.ssl.enabled=false"
     volumes:
       - ./esdata:/usr/share/elasticsearch/data
     networks:
