--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "pinia": "^3.0.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.5"
   }
-} 
+}
