add villager prompt but argument can't work

--- a/dotenv.template
+++ b/dotenv.template
@@ -1,5 +1,6 @@
 OPENAI_API_KEY="INTPUT_YOUR_API_KEY"
 DEEPSEEK_API_KEY="INTPUT_YOUR_API_KEY"
+DEEPSEEK_API_KEY_Villager = "INTPUT_YOUR_API_KEY"
 ES_HOST=http://es:9200
 
 ###
